# CCminer-ARM-optimized

./: .gitignore  Makefile  Makefile.am  Makefile.in  Output-SourceControl-Git.txt  README.md  README.txt  a.out.opt.ld.yaml  aclocal.m4  algos.h  api.cpp  avxintrin-emu.h  bench.cpp  bignum.cpp  bignum.hpp  build.sh  ccminer  ccminer-bench.opt.yaml  ccminer-bignum.opt.yaml  ccminer-ccminer.opt.yaml  ccminer-config.h  ccminer-config.h.in  ccminer-config.h.in~  ccminer-crc32.opt.yaml  ccminer-hashlog.opt.yaml  ccminer-pools.opt.yaml  ccminer-stats.opt.yaml  ccminer-sysinfos.opt.yaml  ccminer-util.opt.yaml  ccminer.conf  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  config.status  configure  configure.ac  configure.sh  configure~  miner.h  run  (+4 more)
.github/workflows/: c-cpp.yml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
compat/: Makefile  Makefile.in
compat/jansson/: Makefile  Makefile.in
equi/: ccminer-equi-stratum.opt.yaml  equi-stratum.cpp
equi/.deps/: ccminer-equi-stratum.Po
verus/: Oharaka.h  Sverus_clhash_portable.cpp  ccminer-haraka.opt.yaml  ccminer-haraka_portable.opt.yaml  ccminer-verus_clhash_portable.opt.yaml  ccminer-verusscan.opt.yaml  haraka.c  haraka.h  haraka_portable.c  haraka_portable.h  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verus_hash.cpp  verus_hash.h  verusscan.cpp
verus/.deps/: ccminer-haraka.Po  ccminer-haraka_portable.Po  ccminer-verus_clhash_portable.Po  ccminer-verusscan.Po
verus/New folder/: haraka.c  haraka.h
